first section basics done

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
+        <div class="firstplace">
+            <div class="compname">
+                <label for="name">Apartment Name:</label>
+                <input type="text"></input>
+            </div>
+            <div class="size">
+                <label for="unitSize">Unit Size: (sq. ft.)</label>
+                <input type="number"></input>
+            </div>
+            <div class="price">
+                <label for="rent">Rent Price: $</label>
+                <input type="number"></input>
+            </div>
+        </div>    
         <script src="" async defer></script>
     </body>
 </html>
